# learning_opengl

./: README.md
01_cc_GLFW_WINDOW/: main.cc
02_py_GLFW_WINDOW/: main.py
03_cc_VBO_SHADERS/: main.cc
04_cc_VAO/: main.cc
05_cc_TWO_VAO/: main.cc
06_py_TWO_VAO/: main.py
07_cc_EBO/: main.cc
08_py_EBO/: main.py
09_cc_Uniform/: main.cc
10_py_Uniform/: main.py
11_cc_vertex_attributes/: CMakeLists.txt  main.cc
12_py_vertex_attributes/: main.py
13_cc_shader_class/: CMakeLists.txt  glad.c  main.cc
13_cc_shader_class/shader/: CMakeLists.txt  shader.cc  shader.fs  shader.h  shader.vs
14_py_shader_class/: fragment_shader.frag  main.py  shader.py  vertex_shader.vs
include/glad/: glad.h
